--- a/app.json
+++ b/app.json
@@ -3,8 +3,8 @@
     "pages/classic/classic"
   ],
   "window" : {
-    "navigationBarBackgroundColor":"#FFFF00",
-    "navigationBarTitleText":"林间有风",
+    "navigationBarBackgroundColor":"#ffffff",
+    "navigationBarTitleText":"旧岛小样",
     "navigationBarTextStyle":"black",
     "navigationStyle":"default",
     "backgroundColor":"#ffffff",
